--- a/.github/workflows/cache-test.yml
+++ b/.github/workflows/cache-test.yml
@@ -13,12 +13,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+
       - name: Prime cache-a3a8fa6
         id: prime-cache
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
           key: cache-a3a8fa6
+
+      - name: Install dependencies
+        run: |
+          pip install --upgrade pip
+          pip install requests
 
       - name: Show cache result
         run: echo "Cache hit/miss: ${{ steps.prime-cache.outputs.cache-hit }}"
