--- a/.github/workflows/cache-test.yml
+++ b/.github/workflows/cache-test.yml
@@ -13,11 +13,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-
       - name: Prime cache-a3a8fa6
         id: prime-cache
         uses: actions/cache@v4
@@ -25,10 +20,5 @@ jobs:
           path: ~/.cache/pip
           key: cache-a3a8fa6
 
-      - name: Install dependencies
-        run: |
-          pip install --upgrade pip
-          pip install requests
-
       - name: Show cache result
-        run: echo "Cache hit/miss: ${{ steps.prime-cache.outputs.cache-hit }}"
+        run: echo "Cache hit/miss: ${{ steps.prime-cache.outputs.cache-hit || 'false' }}"
