--- a/.github/workflows/cache-test.yml
+++ b/.github/workflows/cache-test.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Prime cache-a3a8fa6
-        id: prime-cache
+      - name: Prime cache-a3a8fa6  # display name
+        id: prime-cache              # THIS is the id to reference
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
