--- a/.github/workflows/cache-test.yml
+++ b/.github/workflows/cache-test.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: prime-cache-a3a8fa6  # display name
+      - name: Prime cache-a3a8fa6  # display name
         id: prime-cache         # THIS is the id to reference
         uses: actions/cache@v4
         with:
